--- a/templates/base.html
+++ b/templates/base.html
@@ -11,9 +11,9 @@
         <nav>
           <ul class="menu">
             <li><a href="/">Home</a></li>
-            <li><a href="/books">Books</a></li>
+            <li><a href="/books/index">Books</a></li>
             <li><a href="/authors">Authors</a></li>
-            <!-- <li><a href="/tasks/new">New Task</a></li> -->
+            <!-- <li><a href="tasks/new">New Task</a></li> -->
           </ul>
         </nav>
       </header>
