--- a/templates/books/index.html
+++ b/templates/books/index.html
@@ -10,6 +10,9 @@
             {{book.pages}}
       </div>
     <div class="buttons">
+        <form class="delete" action="/book/{{book.id}}/delete" method="POST"> <!-- NEW -->
+            <button class="trash-button"><i class="fa fa-trash-o fa-3x" style="color:red" aria-hidden="true"></i></button> <!-- NEW -->
+          </form> 
 </div>
     
     
